@@ -1,7 +1,6 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
 S3method(plot,argostrack)
-S3method(plot,argostrack_bootstrap)
 S3method(plot,summary_argostrack)
 S3method(print,argostrack)
 S3method(print,argostrack_bootstrap)
@@ -11,6 +10,5 @@ S3method(residuals,argostrack)
 S3method(simulate,argostrack)
 S3method(summary,argostrack)
 S3method(summary,argostrack_bootstrap)
-export(argosTrack)
 export(simulate)
 import(TMB)
