@@ -1,42 +1,14 @@
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/argostrack.R
+\docType{package}
 \name{argosTrack-package}
 \alias{argosTrack-package}
-\alias{argosTrack}
-\docType{package}
-\title{
-What the package does (short line)
-~~ package title ~~
-}
+\title{Estimate movement models to Argos data.}
 \description{
-More about what it does (maybe more than one line)
-~~ A concise (1-5 lines) description of the package ~~
+argosTrack allows you to fit different movement models to data.
 }
 \details{
-\tabular{ll}{
-Package: \tab argosTrack\cr
-Type: \tab Package\cr
-Version: \tab 1.0\cr
-Date: \tab 2014-09-17\cr
-License: \tab What license is it under?\cr
+The main function in \pkg{argosTrack} is
+\code{\link{argosTrack}}. The package also provides plot, print summary and simulation functions.
 }
-~~ An overview of how to use the package, including the most important ~~
-~~ functions ~~
-}
-\author{
-Who wrote it
 
-Maintainer: Who to complain to <yourfault@somewhere.net>
-~~ The author and/or maintainer of the package ~~
-}
-\references{
-~~ Literature or other references for background information ~~
-}
-~~ Optionally other standard keywords, one per line, from file KEYWORDS in ~~
-~~ the R documentation directory ~~
-\keyword{ package }
-\seealso{
-~~ Optional links to other man pages, e.g. ~~
-~~ \code{\link[<pkg>:<pkg>-package]{<pkg>}} ~~
-}
-\examples{
-
-}
