@@ -9,9 +9,17 @@ simStates(object, newpar = NULL)
 \arguments{
 \item{object}{Argostrack object}
 
+\item{newpar}{List of new parameters}
+
 \item{locationclass}{The location classes of the track}
+}
+\value{
+list of simulated positions (mu) and velocities (vel)
 }
 \description{
 Simulate states given an argostrack object
+}
+\author{
+Christoffer Moesgaard Albertsen
 }
 
